--- a/css/logo_slick.css
+++ b/css/logo_slick.css
@@ -1,85 +1,87 @@
 /* Slider */
+
 .slick-slide {
-  margin: 0px 20px;
+    margin: 0px 20px;
 }
 
 .customer-logos {
-  overflow: inherit;
+    overflow: inherit;
 }
 
 .slick-slide img {
-  width: 90%;
+    width: 100%;
 }
 
 .slick-track::before,
 .slick-track::after {
-  display: table;
-  content: "";
+    display: table;
+    content: "";
 }
 
 .slick-track::after {
-  clear: both;
+    clear: both;
 }
 
 .slick-track {
-  padding: 1rem 0;
+    padding: 1rem 0;
 }
 
 .slick-loading .slick-track {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .slick-slide.slick-loading img {
-  display: none;
+    display: none;
 }
 
 .slick-slide.dragging img {
-  pointer-events: none;
+    pointer-events: none;
 }
 
 .slick-loading .slick-slide {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .slick-arrow {
-  position: absolute;
-  top: 50%;
-  background: url(https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/arrow.svg?sanitize=true)
-    center no-repeat;
-  color: #fff;
-  filter: invert(77%) sepia(32%) saturate(1%) hue-rotate(344deg)
-    brightness(105%) contrast(103%);
-  border: none;
-  width: 2rem;
-  height: 1.5rem;
-  text-indent: -10000px;
-  margin-top: -16px;
-  z-index: 99;
+    position: absolute;
+    top: 50%;
+    background: url(https://raw.githubusercontent.com/solodev/infinite-logo-carousel/master/images/arrow.svg?sanitize=true) center no-repeat;
+    color: #fff;
+    filter: invert(77%) sepia(32%) saturate(1%) hue-rotate(344deg) brightness(105%) contrast(103%);
+    border: none;
+    width: 2rem;
+    height: 1.5rem;
+    text-indent: -10000px;
+    margin-top: -16px;
+    z-index: 99;
 }
 
 .slick-arrow.slick-next {
-  right: -40px;
-  transform: rotate(180deg);
+    right: -40px;
+    transform: rotate(180deg);
 }
 
 .slick-arrow.slick-prev {
-  left: -40px;
+    left: -40px;
 }
+
 
 /* Media Queries */
 
 @media (max-width: 768px) {
-  .slick-arrow {
-    width: 1rem;
-    height: 1rem;
-  }
+    .slick-arrow {
+        width: 1rem;
+        height: 1rem;
+    }
 }
 
 .row {
-  overflow: hidden;
+    overflow: hidden;
 }
 
+
 /* JsFiddle Example only/don't use */
+
 .customer-logos {
-  margin-top: 32px;
+    margin-top: 32px;
 }
