--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
     box-sizing: border-box;
     padding: 0;
     font-family: "Montserrat", sans-serif;
+    font-family: Montserrat;
+    font-style: normal;
     margin: 0;
 }
 
@@ -26,17 +28,54 @@ html {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
+    max-width: 90%;
+    max-height: 90%;
+    /* display: block; */
     /* remove extra space below image */
 }
 
-body {}
-
 .main_heading {
     color: var(--orange);
+    font-size: var(--main-heading);
+    font-weight: bold;
 }
+
+.main_heading_statics {
+    color: var(--orange);
+    font-size: var(--main-heading);
+    font-weight: bold;
+    max-width: 50%;
+    /*creates that fluidity */
+    margin: 0px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.sec_paragraph {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.8244rem;
+    line-height: 2.25rem;
+}
+
+.main_description {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 0.875rem;
+    line-height: 1.0625rem;
+    max-width: 50%;
+    /*creates that fluidity */
+    margin: 0px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main_description span {}
 
 
 /* home */
@@ -57,8 +96,7 @@ body {}
     color: white;
     font-style: normal;
     font-weight: bold;
-    font-size: 5.9656rem;
-    line-height: 7.25rem;
+    font-size: 5rem;
 }
 
 .thirtysecs span {
@@ -71,6 +109,39 @@ body {}
     font-style: normal;
     font-weight: 600;
     font-size: 1.5684rem;
-    margin: 2rem 0px;
-    line-height: 1.9375rem;
+    margin-top: 0.8vw;
+    line-height: 2rem;
+}
+
+.uftlintro {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.125rem;
+    max-width: 80%;
+    line-height: 1.375rem;
+}
+
+
+/* How To Order Fuel */
+
+
+/* products */
+
+.oilheading {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 29.6679px;
+    line-height: 36px;
+    color: #454545;
+}
+
+.product-card {
+    background: #fff;
+    border-radius: 36.8947px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.swiper-pagination {
+    /* margin: 5rem; */
 }
