--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,125 +1,88 @@
-.panel-group .panel {
-  background-color: #fff;
-  border: none;
-  box-shadow: none;
-  border-radius: 10px;
-  margin-bottom: 11px;
-}
-.panel .panel-heading {
-  padding: 0;
-  border-radius: 10px;
-  border: none;
-}
-.panel-heading a {
-  color: #816d6d !important;
-  display: block;
-  border: none;
-  padding: 20px 35px 20px;
-  font-size: 20px;
-  background-color: #fff;
-  font-weight: 600;
-  position: relative;
-  color: #fff;
-  box-shadow: none;
-  transition: all 0.1s ease 0;
-}
-.panel-heading a:after,
-.panel-heading a.collapsed:after {
-  content: "\f068";
-  font-family: fontawesome;
-  text-align: center;
-  position: absolute;
-  left: -20px;
-  top: 10px;
-  color: #816d6d !important;
-  background-color: #fff;
-  border: 5px solid #fff;
-  font-size: 15px;
-  width: 40px;
-  height: 40px;
-  line-height: 30px;
-  border-radius: 50%;
-  transition: all 0.3s ease 0s;
-}
-.panel-heading:hover a:after,
-.panel-heading:hover a.collapsed:after {
-  transform: rotate(360deg);
-}
-.panel-heading a.collapsed:after {
-  content: "\f067";
-}
-#accordion .panel-body {
-  background-color: #fbf8f8;
-  color: #8c8c8c;
-  line-height: 25px;
-  padding: 10px 25px 20px 35px;
-  border-top: none;
-  font-size: 14px;
-  position: relative;
-}
-.text-white {
-  color: white;
-  text-transform: uppercase;
+body>div {
+    width: 90%;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 
-.loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  border: 4px solid #fff;
-  top: 50%;
-  animation: loader 2s infinite ease;
+details div {
+    border-left: 2px solid #ff6f00;
+    border-right: 2px solid #ff6f00;
+    border-bottom: 2px solid #ff6f00;
+    padding: 1.5em;
 }
 
-.loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in;
+details div>*+* {
+    margin-top: 1.5em;
 }
 
-@keyframes loader {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  25% {
-    transform: rotate(180deg);
-  }
-
-  50% {
-    transform: rotate(180deg);
-  }
-
-  75% {
-    transform: rotate(360deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+details+details {
+    margin-top: .5rem;
 }
 
-@keyframes loader-inner {
-  0% {
-    height: 0%;
-  }
+summary {
+    list-style: none;
+}
 
-  25% {
-    height: 0%;
-  }
+summary::-webkit-details-marker {
+    display: none;
+}
 
-  50% {
-    height: 100%;
-  }
+summary {
+    /* border: 2px solid #000; */
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 29px;
+    padding: .75em 1em;
+    cursor: pointer;
+    position: relative;
+    padding-left: calc(1.75rem + .75rem + .75rem);
+}
 
-  75% {
-    height: 100%;
-  }
+summary:before {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: .75rem;
+    content: "↓";
+    width: 2rem;
+    height: 2rem;
+    background-color: #ff6f00;
+    color: #FFF;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
 
-  100% {
-    height: 0%;
-  }
+details[open] summary {
+    background-color: #eee;
+}
+
+details[open] summary:before {
+    content: "↑";
+}
+
+summary:hover {
+    background-color: #eee;
+}
+
+a {
+    color: inherit;
+    font-weight: 600;
+    text-decoration: none;
+    box-shadow: 0 1px 0 0;
+}
+
+a:hover {
+    box-shadow: 0 3px 0 0;
+}
+
+code {
+    font-family: monospace;
+    font-weight: 600;
 }
