--- a/css/our_team.css
+++ b/css/our_team.css
@@ -1,88 +1,106 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://use.fontawesome.com/releases/v5.13.0/css/all.css");
 :root {
-  --font3: "Roboto", sans-serif;
+    --font3: "Roboto", sans-serif;
 }
 
 .h1,
 h1 {
-  font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .container-fluid {
-  max-width: 1400px;
+    max-width: 1400px;
 }
 
 .card {
-  background: #fff;
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
-  border: 1;
-  border-radius: 1rem;
+    background: #fff;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    border-radius: 1rem;
 }
 
 .img-hover-zoom--colorize img {
-  border-radius: 50%;
-  width: 150px;
-  height: auto;
-  margin-top: 20px;
-  padding: 1px;
-  transition: transform 0.5s;
-  filter: grayscale(100%);
+    border-radius: 50%;
+    width: 150px;
+    height: auto;
+    margin-top: 20px;
+    padding: 1px;
+    transition: transform 0.5s;
+    filter: grayscale(100%);
 }
 
 .img-hover-zoom--colorize:hover img {
-  filter: grayscale(0);
-  transform: scale(1.05);
+    filter: grayscale(0);
+    transform: scale(1.05);
 }
 
 .card h5 {
-  overflow: hidden;
-  height: 80px;
-  font-weight: 300;
-  font-size: 1rem;
+    overflow: hidden;
+    height: 80px;
+    font-weight: 300;
+    font-size: 1rem;
 }
 
 .card h5 a {
-  color: black;
-  text-decoration: none;
+    color: black;
+    text-decoration: none;
+}
+
+.person_name {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 26.5781px;
+    line-height: 32px;
+    text-align: center;
+    color: #000000;
 }
 
 .role {
-  color: #7a7a7a;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13.1633px;
+    line-height: 16px;
+    /* identical to box height */
+    text-align: center;
+    /* brand */
+    color: #FF6F00;
 }
 
 .box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .fab {
-  font-size: 1.5rem;
-  color: darkgray;
-  transition: transform 0.5s;
+    font-size: 1.5rem;
+    color: #FF6F00;
+    transition: transform 0.5s;
 }
 
 .fab:hover {
-  color: black;
-  transform: scale(1.1);
+    color: #FF6F00;
+    transform: scale(1.1);
 }
 
 .card h2 {
-  font-size: 1rem;
+    font-size: 1rem;
 }
+
 
 /* MEDIA */
 
 @media only screen and (min-width: 1200px) {
-  .img-hover-zoom--colorize img {
-    width: 200px;
-  }
+    .img-hover-zoom--colorize img {
+        width: 200px;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
-  .h1,
-  h1 {
-    font-size: 2rem;
-  }
+    .h1,
+    h1 {
+        font-size: 2rem;
+    }
 }
