--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-.person_quote_flexbox {
-    display: flex;
-}
-
-
 /* root */
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
@@ -12,13 +7,13 @@
     --second-heading: 1.875rem;
     --main-paragrah: 0.875rem;
     --black: #454545;
+    --first-color: #ff6f00;
 }
 
 * {
     box-sizing: border-box;
     padding: 0;
     font-family: "Montserrat", sans-serif;
-    background-color: #fff;
     font-family: Montserrat;
     font-style: normal;
     margin: 0;
@@ -34,6 +29,16 @@ img {
     /* display: block; */
     /* remove extra space below image */
 }
+
+
+/* image_why */
+
+
+/* 
+.image_why {
+    background-color: red;
+    margin: 30px;
+} */
 
 .main_heading {
     color: var(--orange);
@@ -77,6 +82,16 @@ img {
 }
 
 .main_description span {}
+
+.bullet_text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 23.565px;
+    line-height: 29px;
+    /* identical to box height */
+    color: #000000;
+}
 
 
 /* home */
@@ -157,6 +172,19 @@ img {
     color: #454545;
 }
 
+.portion {
+    background: #faf7f7;
+    box-shadow: 4.61184px 4.61184px 78.4013px rgba(0, 0, 0, 0.05);
+    border-radius: 36.8947px;
+}
+
+
+/* 
+.pro {
+    display: flex;
+
+} */
+
 .product-card {
     background: #fff;
     border-radius: 36.8947px;
@@ -173,6 +201,7 @@ img {
 .fa-check-circle {
     color: var(--orange);
     font-size: 3rem;
+    position: relative;
 }
 
 .features_text {
@@ -182,4 +211,139 @@ img {
     font-size: 1.3rem;
     line-height: 25px;
     color: #454545;
+}
+
+
+/* smart tank */
+
+.usingheadings {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 23.565px;
+    line-height: 29px;
+    color: #000000;
+}
+
+.orange_howtoorderfuel {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 51.8233px;
+    line-height: 63px;
+    /* identical to box height */
+    /* #FF6F00 */
+    color: #FF6F00;
+}
+
+.usingour {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 44px;
+    /* identical to box height */
+    color: #000000;
+}
+
+.for_your {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 27.9643px;
+    line-height: 34px;
+    color: #000000;
+}
+
+
+/* testimonial */
+
+.quotes {
+    width: auto;
+    padding: 50px 0px 0px 50px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17.6301px;
+    line-height: 150%;
+}
+
+.person_quote_flexbox {
+    display: flex;
+    margin-left: 50px;
+    /* margin-top: 50px */
+}
+
+.text-left {
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
+.person_name {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22.8288px;
+    line-height: 28px;
+    /* #FF6F00 */
+    color: #FF6F00;
+}
+
+.person_name2 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22.8288px;
+    /* #FF6F00 */
+    color: #FF6F00;
+}
+
+.designation {
+    margin-top: -10px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14.1454px;
+    line-height: 17px;
+    /* #000000 */
+    color: #000000;
+}
+
+
+/* blog */
+
+.blog_flex {
+    display: flex;
+}
+
+.blog_image {
+    width: 90%;
+}
+
+.blog_title {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25.9548px;
+    line-height: 32px;
+    text-decoration-line: underline;
+    /* #000000 */
+    color: #000000;
+}
+
+.blog_description {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13.1116px;
+    line-height: 16px;
+    /* #000000 */
+    color: #000000;
+}
+
+
+/* frequent */
+
+.featuresheading {
+    margin-bottom: 50px;
 }
