--- a/css/accordion.css
+++ b/css/accordion.css
@@ -7,7 +7,7 @@ body>div {
     margin-bottom: 5rem;
 }
 
-details div {
+details .accord {
     border-left: 2px solid #ff6f00;
     border-right: 2px solid #ff6f00;
     border-bottom: 2px solid #ff6f00;
@@ -75,11 +75,10 @@ a {
     color: inherit;
     font-weight: 600;
     text-decoration: none;
-    box-shadow: 0 1px 0 0;
 }
 
 a:hover {
-    box-shadow: 0 3px 0 0;
+    text-decoration: none;
 }
 
 code {
